css/responsive.css
/*responsive.css*/

@media (min-width: 768px) {
	.navbar-toggle {
	    display: block;
	}/*min-width: 768px*/
}
@media (min-width: 1200px) {
	#navbar {
		margin-left:510px;
	}
		/*//////////test*/
	.row > div {
		border-right:10px solid #dadada;
		border-left:10px solid #dadada;

	}
	.row > div:last-child {
		border-right:0;
	}
	.row > div:first-child {
		border-left:0;
	}

}/*min-width 1200*/

@media (min-width: 1000px) {
	.navbar-nav>li {
	    float: none;
	}
	.navbar-toggle {
    display: none;
	}
}/*min width 1000*/

@media(max-width:1000px)  {
	.container {
	    width: 100%;
	}
	#content {
   		margin-top: 100px;
	}
	#home #content .row {
		margin-bottom: 0;
	}
	#home #content .row > div, #home #content  #home-banner {
		margin-bottom:20px;
	}
    .navbar-collapse.collapse {
        display: none !important;
    }

    .navbar-collapse {
        overflow-x: visible !important;
    }

    .navbar-collapse.in {
      overflow-y: auto !important;
    }

    .collapse.in {
      display: block !important;
    }
    .navbar-toggle {
	    position: absolute;
	    float: right;
	    right:0;
	    padding: 0;
	    margin:1px 10px 0 0;
	    background-color: transparent;
	    background-image: none;
	    border: 1px solid transparent;
	    border-radius: 4px;
	    color:#00b0bd;
		font-size:24px;
		z-index:2000;
		display: block;
	}
    #navbar {
	    margin: 0;
	    position: absolute;
	    top: 0;
	    width: 100%;
	    background-color: #ccc;
	    left: 0;
	    min-height: 3000px;
	    padding-left: 20px;
	}

	#navbar a {
	    color: #000;
	    text-transform: uppercase;
	    font-size: 16px;
	    display: inline-block;
	    padding: 10px 0 2px 0;
	    border-bottom: 1px solid transparent;
	}
	#navbar li.active a, #navbar a:hover {
	    border-bottom: 1px solid #00b0bd;
	    background-color: transparent;
	}
	#navbar .navbar-nav, #navbar .navbar-nav li {
		float:none;
		margin:0;
	}
	#navbar .navbar-nav li {
		margin-bottom:30px;
	}
	#logo {
    	width: 25px;
    	height: auto;
	}
}/*max-width 1000*/

